vlib/v/checker/tests/orm_mismatched_types.vv
import sqlite

struct Tiddler {
	id      int
	created int
}

struct Tiddlers {
	id      int    [primary; sql: serial]
	created string
}

fn main() {
	tiddler := Tiddler{}
	db := sqlite.connect(':memory:') or { panic(err) }
	sql db {
		create table Tiddlers
		insert tiddler into Tiddlers
	}
}
